--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -1828,6 +1828,303 @@
    "source": [
     "docker run -d --name tomcat_jsp -p 8080:8080 -v $PWD/code:/usr/local/tomcat/webaps/jsptest iiiedu/tomcat"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 30.11.2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: vagrant [options] <command> [<args>]\n",
+      "\n",
+      "    -v, --version                    Print the version and exit.\n",
+      "    -h, --help                       Print this help.\n",
+      "\n",
+      "Common commands:\n",
+      "     box             manages boxes: installation, removal, etc.\n",
+      "     connect         connect to a remotely shared Vagrant environment\n",
+      "     destroy         stops and deletes all traces of the vagrant machine\n",
+      "     global-status   outputs status Vagrant environments for this user\n",
+      "     halt            stops the vagrant machine\n",
+      "     help            shows the help for a subcommand\n",
+      "     init            initializes a new Vagrant environment by creating a Vagrantfile\n",
+      "     login           log in to HashiCorp's Atlas\n",
+      "     package         packages a running vagrant environment into a box\n",
+      "     plugin          manages plugins: install, uninstall, update, etc.\n",
+      "     port            displays information about guest port mappings\n",
+      "     powershell      connects to machine via powershell remoting\n",
+      "     provision       provisions the vagrant machine\n",
+      "     push            deploys code in this environment to a configured destination\n",
+      "     rdp             connects to machine via RDP\n",
+      "     reload          restarts vagrant machine, loads new Vagrantfile configuration\n",
+      "     resume          resume a suspended vagrant machine\n",
+      "     share           share your Vagrant environment with anyone in the world\n",
+      "     snapshot        manages snapshots: saving, restoring, etc.\n",
+      "     ssh             connects to machine via SSH\n",
+      "     ssh-config      outputs OpenSSH valid configuration to connect to the machine\n",
+      "     status          outputs status of the vagrant machine\n",
+      "     suspend         suspends the machine\n",
+      "     up              starts and provisions the vagrant environment\n",
+      "     vbguest         \n",
+      "     version         prints current and latest Vagrant version\n",
+      "\n",
+      "For help on any individual command run `vagrant COMMAND -h`\n",
+      "\n",
+      "Additional subcommands are available, but are either more advanced\n",
+      "or not commonly used. To see all subcommands, run the command\n",
+      "`vagrant list-commands`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!vagrant --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "$ vagrant box add ubuntu/xenial64 ubuntu-xenial64.box\n",
+    "==> box: Box file was not detected as metadata. Adding it directly...\n",
+    "==> box: Adding box 'ubuntu/xenial64' (v0) for provider:\n",
+    "    box: Unpacking necessary files from: file://C:/Users/Student/ubuntu-xenial64.box\n",
+    "    box:\n",
+    "==> box: Successfully added box 'ubuntu/xenial64' (v0) for 'virtualbox'!\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> box: Box file was not detected as metadata. Adding it directly...\r\n",
+      "==> box: Adding box 'iiiedu/xenial64' (v0) for provider: \r\n",
+      "    box: Unpacking necessary files from: file://C:/Users/Student/ubuntu-xenial64.box\r\n",
+      "\r",
+      "\u001b[K    box: Progress: 0% (Rate: 0/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 100% (Rate: 947M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: \r\n",
+      "==> box: Successfully added box 'iiiedu/xenial64' (v0) for 'virtualbox'!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/\n",
+    "vagrant box add iiiedu/xenial64 ubuntu-xenial64.box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iiiedu/xenial64 (virtualbox, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!vagrant box list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A `Vagrantfile` has been placed in this directory. You are now\r\n",
+      "ready to `vagrant up` your first virtual environment! Please read\r\n",
+      "the comments in the Vagrantfile as well as documentation on\r\n",
+      "`vagrantup.com` for more information on using Vagrant.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/\n",
+    "mkdir demo\n",
+    "cd demo\n",
+    "vagrant init iiiedu/xenial64 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# -*- mode: ruby -*-\r\n",
+      "# vi: set ft=ruby :\r\n",
+      "\r\n",
+      "# All Vagrant configuration is done below. The \"2\" in Vagrant.configure\r\n",
+      "# configures the configuration version (we support older styles for\r\n",
+      "# backwards compatibility). Please don't change it unless you know what\r\n",
+      "# you're doing.\r\n",
+      "Vagrant.configure(\"2\") do |config|\r\n",
+      "  # The most common configuration options are documented and commented below.\r\n",
+      "  # For a complete reference, please see the online documentation at\r\n",
+      "  # https://docs.vagrantup.com.\r\n",
+      "\r\n",
+      "  # Every Vagrant development environment requires a box. You can search for\r\n",
+      "  # boxes at https://atlas.hashicorp.com/search.\r\n",
+      "  config.vm.box = \"iiiedu/xenial64\"\r\n",
+      "\r\n",
+      "  # Disable automatic box update checking. If you disable this, then\r\n",
+      "  # boxes will only be checked for updates when the user runs\r\n",
+      "  # `vagrant box outdated`. This is not recommended.\r\n",
+      "  # config.vm.box_check_update = false\r\n",
+      "\r\n",
+      "  # Create a forwarded port mapping which allows access to a specific port\r\n",
+      "  # within the machine from a port on the host machine. In the example below,\r\n",
+      "  # accessing \"localhost:8080\" will access port 80 on the guest machine.\r\n",
+      "  # config.vm.network \"forwarded_port\", guest: 80, host: 8080\r\n",
+      "\r\n",
+      "  # Create a private network, which allows host-only access to the machine\r\n",
+      "  # using a specific IP.\r\n",
+      "  # config.vm.network \"private_network\", ip: \"192.168.33.10\"\r\n",
+      "\r\n",
+      "  # Create a public network, which generally matched to bridged network.\r\n",
+      "  # Bridged networks make the machine appear as another physical device on\r\n",
+      "  # your network.\r\n",
+      "  # config.vm.network \"public_network\"\r\n",
+      "\r\n",
+      "  # Share an additional folder to the guest VM. The first argument is\r\n",
+      "  # the path on the host to the actual folder. The second argument is\r\n",
+      "  # the path on the guest to mount the folder. And the optional third\r\n",
+      "  # argument is a set of non-required options.\r\n",
+      "  # config.vm.synced_folder \"../data\", \"/vagrant_data\"\r\n",
+      "\r\n",
+      "  # Provider-specific configuration so you can fine-tune various\r\n",
+      "  # backing providers for Vagrant. These expose provider-specific options.\r\n",
+      "  # Example for VirtualBox:\r\n",
+      "  #\r\n",
+      "  # config.vm.provider \"virtualbox\" do |vb|\r\n",
+      "  #   # Display the VirtualBox GUI when booting the machine\r\n",
+      "  #   vb.gui = true\r\n",
+      "  #\r\n",
+      "  #   # Customize the amount of memory on the VM:\r\n",
+      "  #   vb.memory = \"1024\"\r\n",
+      "  # end\r\n",
+      "  #\r\n",
+      "  # View the documentation for the provider you are using for more\r\n",
+      "  # information on available options.\r\n",
+      "\r\n",
+      "  # Define a Vagrant Push strategy for pushing to Atlas. Other push strategies\r\n",
+      "  # such as FTP and Heroku are also available. See the documentation at\r\n",
+      "  # https://docs.vagrantup.com/v2/push/atlas.html for more information.\r\n",
+      "  # config.push.define \"atlas\" do |push|\r\n",
+      "  #   push.app = \"YOUR_ATLAS_USERNAME/YOUR_APPLICATION_NAME\"\r\n",
+      "  # end\r\n",
+      "\r\n",
+      "  # Enable provisioning with a shell script. Additional provisioners such as\r\n",
+      "  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the\r\n",
+      "  # documentation for more information about their specific syntax and use.\r\n",
+      "  # config.vm.provision \"shell\", inline: <<-SHELL\r\n",
+      "  #   apt-get update\r\n",
+      "  #   apt-get install -y apache2\r\n",
+      "  # SHELL\r\n",
+      "end\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cat ~/demo/Vagrantfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bringing machine 'default' up with 'virtualbox' provider...\r\n",
+      "==> default: Importing base box 'iiiedu/xenial64'...\r\n",
+      "\r",
+      "\u001b[KProgress: 90%\r",
+      "\u001b[K==> default: Matching MAC address for NAT networking...\r\n",
+      "==> default: Setting the name of the VM: demo_default_1480475976997_90807\r\n",
+      "==> default: Clearing any previously set network interfaces...\r\n",
+      "==> default: Preparing network interfaces based on configuration...\r\n",
+      "    default: Adapter 1: nat\r\n",
+      "==> default: Forwarding ports...\r\n",
+      "    default: 22 (guest) => 2222 (host) (adapter 1)\r\n",
+      "==> default: Booting VM...\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "There was an error while executing `VBoxManage`, a CLI used by Vagrant\r\n",
+      "for controlling VirtualBox. The command and stderr is shown below.\r\n",
+      "\r\n",
+      "Command: [\"startvm\", \"050c8004-25fd-4055-8c26-63d6919bf5e0\", \"--type\", \"headless\"]\r\n",
+      "\r\n",
+      "Stderr: VBoxManage.exe: error: RawFile#0 failed to create the raw output file C:/Users/admin/demo/ubuntu-xenial-16.04-cloudimg-console.log (VERR_PATH_NOT_FOUND)\r",
+      "\r\n",
+      "VBoxManage.exe: error: Details: code E_FAIL (0x80004005), component ConsoleWrap, interface IConsole\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/demo\n",
+    "vagrant up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
