--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -1877,7 +1877,6 @@
       "     status          outputs status of the vagrant machine\n",
       "     suspend         suspends the machine\n",
       "     up              starts and provisions the vagrant environment\n",
-      "     vbguest         \n",
       "     version         prints current and latest Vagrant version\n",
       "\n",
       "For help on any individual command run `vagrant COMMAND -h`\n",
@@ -1908,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1919,10 +1918,12 @@
      "text": [
       "==> box: Box file was not detected as metadata. Adding it directly...\r\n",
       "==> box: Adding box 'iiiedu/xenial64' (v0) for provider: \r\n",
-      "    box: Unpacking necessary files from: file://C:/Users/Student/ubuntu-xenial64.box\r\n",
+      "    box: Unpacking necessary files from: file://C:/Users/admin/ubuntu-xenial64.box\r\n",
+      "==> box: Box download is resuming from prior download progress\r\n",
       "\r",
       "\u001b[K    box: Progress: 0% (Rate: 0/s, Estimated time remaining: --:--:--)\r",
-      "\u001b[K    box: Progress: 100% (Rate: 947M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 73% (Rate: 38.2M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 100% (Rate: 49.4M/s, Estimated time remaining: --:--:--)\r",
       "\u001b[K    box: \r\n",
       "==> box: Successfully added box 'iiiedu/xenial64' (v0) for 'virtualbox'!\r\n"
      ]
@@ -1936,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1955,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1981,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2072,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -2086,28 +2087,64 @@
       "\r",
       "\u001b[KProgress: 90%\r",
       "\u001b[K==> default: Matching MAC address for NAT networking...\r\n",
-      "==> default: Setting the name of the VM: demo_default_1480475976997_90807\r\n",
+      "==> default: Setting the name of the VM: demo_default_1480477583460_38582\r\n",
       "==> default: Clearing any previously set network interfaces...\r\n",
       "==> default: Preparing network interfaces based on configuration...\r\n",
       "    default: Adapter 1: nat\r\n",
       "==> default: Forwarding ports...\r\n",
       "    default: 22 (guest) => 2222 (host) (adapter 1)\r\n",
-      "==> default: Booting VM...\r\n"
+      "==> default: Booting VM...\r\n",
+      "==> default: Waiting for machine to boot. This may take a few minutes...\r\n",
+      "    default: SSH address: 127.0.0.1:2222\r\n",
+      "    default: SSH username: vagrant\r\n",
+      "    default: SSH auth method: private key\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n",
+      "    default: Warning: Authentication failure. Retrying...\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "There was an error while executing `VBoxManage`, a CLI used by Vagrant\r\n",
-      "for controlling VirtualBox. The command and stderr is shown below.\r\n",
+      "Timed out while waiting for the machine to boot. This means that\r\n",
+      "Vagrant was unable to communicate with the guest machine within\r\n",
+      "the configured (\"config.vm.boot_timeout\" value) time period.\r\n",
       "\r\n",
-      "Command: [\"startvm\", \"050c8004-25fd-4055-8c26-63d6919bf5e0\", \"--type\", \"headless\"]\r\n",
+      "If you look above, you should be able to see the error(s) that\r\n",
+      "Vagrant had when attempting to connect to the machine. These errors\r\n",
+      "are usually good hints as to what may be wrong.\r\n",
       "\r\n",
-      "Stderr: VBoxManage.exe: error: RawFile#0 failed to create the raw output file C:/Users/admin/demo/ubuntu-xenial-16.04-cloudimg-console.log (VERR_PATH_NOT_FOUND)\r",
+      "If you're using a custom box, make sure that networking is properly\r\n",
+      "working and you're able to connect to the machine. It is a common\r\n",
+      "problem that networking isn't setup properly in these boxes.\r\n",
+      "Verify that authentication configurations are also setup properly,\r\n",
+      "as well.\r\n",
       "\r\n",
-      "VBoxManage.exe: error: Details: code E_FAIL (0x80004005), component ConsoleWrap, interface IConsole\r",
-      "\r\n"
+      "If the box appears to be booting properly, you may want to increase\r\n",
+      "the timeout (\"config.vm.boot_timeout\") value.\r\n"
      ]
     }
    ],
@@ -2124,15 +2161,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
