--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -1837,6 +1837,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vagrant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1892,17 +1899,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> box: Box file was not detected as metadata. Adding it directly...\r\n",
+      "==> box: Adding box 'iiiedu/trusty64' (v0) for provider: \r\n",
+      "    box: Unpacking necessary files from: file://C:/Users/Student/ubuntu-trusty64.box\r\n",
+      "\r",
+      "\u001b[K    box: Progress: 0% (Rate: 0/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 100% (Rate: 1020M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: \r\n",
+      "==> box: Successfully added box 'iiiedu/trusty64' (v0) for 'virtualbox'!\r\n"
+     ]
+    }
+   ],
    "source": [
-    "```bash\n",
-    "$ vagrant box add ubuntu/xenial64 ubuntu-xenial64.box\n",
-    "==> box: Box file was not detected as metadata. Adding it directly...\n",
-    "==> box: Adding box 'ubuntu/xenial64' (v0) for provider:\n",
-    "    box: Unpacking necessary files from: file://C:/Users/Student/ubuntu-xenial64.box\n",
-    "    box:\n",
-    "==> box: Successfully added box 'ubuntu/xenial64' (v0) for 'virtualbox'!\n",
-    "    ```"
+    "%%bash\n",
+    "cd ~/\n",
+    "vagrant box add iiiedu/trusty64 ubuntu-trusty64.box"
    ]
   },
   {
@@ -1916,36 +1937,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==> box: Box file was not detected as metadata. Adding it directly...\r\n",
-      "==> box: Adding box 'iiiedu/xenial64' (v0) for provider: \r\n",
-      "    box: Unpacking necessary files from: file://C:/Users/admin/ubuntu-xenial64.box\r\n",
-      "==> box: Box download is resuming from prior download progress\r\n",
-      "\r",
-      "\u001b[K    box: Progress: 0% (Rate: 0/s, Estimated time remaining: --:--:--)\r",
-      "\u001b[K    box: Progress: 73% (Rate: 38.2M/s, Estimated time remaining: --:--:--)\r",
-      "\u001b[K    box: Progress: 100% (Rate: 49.4M/s, Estimated time remaining: --:--:--)\r",
-      "\u001b[K    box: \r\n",
-      "==> box: Successfully added box 'iiiedu/xenial64' (v0) for 'virtualbox'!\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "cd ~/\n",
-    "vagrant box add iiiedu/xenial64 ubuntu-xenial64.box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iiiedu/trusty64 (virtualbox, 0)\n",
       "iiiedu/xenial64 (virtualbox, 0)\n"
      ]
     }
@@ -1956,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1977,12 +1969,12 @@
     "cd ~/\n",
     "mkdir demo\n",
     "cd demo\n",
-    "vagrant init iiiedu/xenial64 "
+    "vagrant init iiiedu/trusty64 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2006,7 +1998,7 @@
       "\r\n",
       "  # Every Vagrant development environment requires a box. You can search for\r\n",
       "  # boxes at https://atlas.hashicorp.com/search.\r\n",
-      "  config.vm.box = \"iiiedu/xenial64\"\r\n",
+      "  config.vm.box = \"iiiedu/trusty64\"\r\n",
       "\r\n",
       "  # Disable automatic box update checking. If you disable this, then\r\n",
       "  # boxes will only be checked for updates when the user runs\r\n",
@@ -2073,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2083,11 +2075,11 @@
      "output_type": "stream",
      "text": [
       "Bringing machine 'default' up with 'virtualbox' provider...\r\n",
-      "==> default: Importing base box 'iiiedu/xenial64'...\r\n",
+      "==> default: Importing base box 'iiiedu/trusty64'...\r\n",
       "\r",
       "\u001b[KProgress: 90%\r",
       "\u001b[K==> default: Matching MAC address for NAT networking...\r\n",
-      "==> default: Setting the name of the VM: demo_default_1480477583460_38582\r\n",
+      "==> default: Setting the name of the VM: demo_default_1480478195274_10019\r\n",
       "==> default: Clearing any previously set network interfaces...\r\n",
       "==> default: Preparing network interfaces based on configuration...\r\n",
       "    default: Adapter 1: nat\r\n",
@@ -2098,53 +2090,76 @@
       "    default: SSH address: 127.0.0.1:2222\r\n",
       "    default: SSH username: vagrant\r\n",
       "    default: SSH auth method: private key\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n",
-      "    default: Warning: Authentication failure. Retrying...\r\n"
+      "==> default: Machine booted and ready!\r\n",
+      "[default] GuestAdditions versions on your host (5.1.10) and guest (5.1.8) do not match.\r\n",
+      "stdin: is not a tty\r\n",
+      "Reading package lists...\r\n",
+      "Building dependency tree...\r\n",
+      "Reading state information...\r\n",
+      "dkms is already the newest version.\r\n",
+      "linux-headers-3.13.0-101-generic is already the newest version.\r\n",
+      "The following packages were automatically installed and are no longer required:\r\n",
+      "  acl at-spi2-core colord dconf-gsettings-backend dconf-service fontconfig\r\n",
+      "  fontconfig-config fonts-dejavu-core hicolor-icon-theme libasound2\r\n",
+      "  libasound2-data libatk-bridge2.0-0 libatk1.0-0 libatk1.0-data libatspi2.0-0\r\n",
+      "  libavahi-client3 libavahi-common-data libavahi-common3 libcairo-gobject2\r\n",
+      "  libcairo2 libcanberra-gtk3-0 libcanberra-gtk3-module libcanberra0 libcolord1\r\n",
+      "  libcolorhug1 libcups2 libdatrie1 libdconf1 libdrm-intel1 libdrm-nouveau2\r\n",
+      "  libdrm-radeon1 libexif12 libfontconfig1 libfontenc1 libgd3\r\n",
+      "  libgdk-pixbuf2.0-0 libgdk-pixbuf2.0-common libgl1-mesa-dri libgl1-mesa-glx\r\n",
+      "  libglapi-mesa libgphoto2-6 libgphoto2-l10n libgphoto2-port10 libgraphite2-3\r\n",
+      "  libgtk-3-0 libgtk-3-bin libgtk-3-common libgudev-1.0-0 libgusb2\r\n",
+      "  libharfbuzz0b libice6 libieee1284-3 libjasper1 libjbig0 libjpeg-turbo8\r\n",
+      "  libjpeg8 liblcms2-2 libllvm3.4 libltdl7 libnotify-bin libnotify4 libogg0\r\n",
+      "  libpango-1.0-0 libpangocairo-1.0-0 libpangoft2-1.0-0 libpciaccess0\r\n",
+      "  libpixman-1-0 libsane libsane-common libsm6 libtdb1 libthai-data libthai0\r\n",
+      "  libtiff5 libtxc-dxtn-s2tc0 libv4l-0 libv4lconvert0 libvorbis0a\r\n",
+      "  libvorbisfile3 libvpx1 libwayland-client0 libwayland-cursor0 libx11-xcb1\r\n",
+      "  libxaw7 libxcb-dri2-0 libxcb-dri3-0 libxcb-glx0 libxcb-present0\r\n",
+      "  libxcb-render0 libxcb-shm0 libxcb-sync1 libxcomposite1 libxcursor1\r\n",
+      "  libxdamage1 libxfixes3 libxfont1 libxi6 libxinerama1 libxkbcommon0\r\n",
+      "  libxkbfile1 libxmu6 libxpm4 libxrandr2 libxrender1 libxshmfence1 libxt6\r\n",
+      "  libxtst6 libxxf86vm1 notification-daemon sound-theme-freedesktop x11-common\r\n",
+      "  x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils xserver-common\r\n",
+      "  xserver-xorg-core\r\n",
+      "Use 'apt-get autoremove' to remove them.\r\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 0 not upgraded.\r\n",
+      "Copy iso file C:\\Program Files\\Oracle\\VirtualBox\\VBoxGuestAdditions.iso into the box /tmp/VBoxGuestAdditions.iso\r\n",
+      "stdin: is not a tty\r\n",
+      "mount: block device /tmp/VBoxGuestAdditions.iso is write-protected, mounting read-only\r\n",
+      "Installing Virtualbox Guest Additions 5.1.10 - guest version is 5.1.8\r\n",
+      "stdin: is not a tty\r\n",
+      "Verifying archive integrity... All good.\r\n",
+      "Uncompressing VirtualBox 5.1.10 Guest Additions for Linux...........\r\n",
+      "VirtualBox Guest Additions installer\r\n",
+      "Removing installed version 5.1.8 of VirtualBox Guest Additions...\r\n",
+      "vboxadd-service.sh: Stopping VirtualBox Guest Addition service.\r\n",
+      "vboxadd.sh: Stopping VirtualBox Additions.\r\n",
+      "Copying additional installer modules ...\r\n",
+      "Installing additional modules ...\r\n",
+      "vboxadd.sh: Building Guest Additions kernel modules.\r\n",
+      "vboxadd.sh: Starting the VirtualBox Guest Additions.\r\n",
+      "\r\n",
+      "Could not find the X.Org or XFree86 Window System, skipping.\r\n",
+      "stdin: is not a tty\r\n",
+      "Got different reports about installed GuestAdditions version:\r\n",
+      "Virtualbox on your host claims:   5.1.8\r\n",
+      "VBoxService inside the vm claims: 5.1.10\r\n",
+      "Going on, assuming VBoxService is correct...\r\n",
+      "Got different reports about installed GuestAdditions version:\r\n",
+      "Virtualbox on your host claims:   5.1.8\r\n",
+      "VBoxService inside the vm claims: 5.1.10\r\n",
+      "Going on, assuming VBoxService is correct...\r\n",
+      "==> default: Checking for guest additions in VM...\r\n",
+      "==> default: Mounting shared folders...\r\n",
+      "    default: /vagrant => C:/Users/Student/demo\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Timed out while waiting for the machine to boot. This means that\r\n",
-      "Vagrant was unable to communicate with the guest machine within\r\n",
-      "the configured (\"config.vm.boot_timeout\" value) time period.\r\n",
-      "\r\n",
-      "If you look above, you should be able to see the error(s) that\r\n",
-      "Vagrant had when attempting to connect to the machine. These errors\r\n",
-      "are usually good hints as to what may be wrong.\r\n",
-      "\r\n",
-      "If you're using a custom box, make sure that networking is properly\r\n",
-      "working and you're able to connect to the machine. It is a common\r\n",
-      "problem that networking isn't setup properly in these boxes.\r\n",
-      "Verify that authentication configurations are also setup properly,\r\n",
-      "as well.\r\n",
-      "\r\n",
-      "If the box appears to be booting properly, you may want to increase\r\n",
-      "the timeout (\"config.vm.boot_timeout\") value.\r\n"
+      "\r\n"
      ]
     }
    ],
@@ -2155,23 +2170,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vagrant ssh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
